--- a/.env.example
+++ b/.env.example
@@ -1,43 +1,31 @@
 # -- DEV MODE if true, log debugs and traces
 DEV_MODE=True
 
-# Ollama and ollamazure models to emulate openai or azure_openai
-# run make run-ollama or make run-ollamazure to emulate openai or azure_openai locally
-OLLAMA_MODEL_NAME=qwen2.5:0.5b
-OLLAMA_EMBEDDING_MODEL_NAME=all-minilm:l6-v2
+# -- DATABASE
+DATABASE_URL=sqlite:///./parking.db
+ASYNC_DATABASE_URL=sqlite+aiosqlite:///./parking.db
 
-INFERENCE_DEPLOYMENT_NAME=ollama_chat/qwen2.5:0.5b
-INFERENCE_BASE_URL=http://localhost:11434
-INFERENCE_API_KEY=t
+# -- LLM Configuration (for CrewAI)
+# Option 1: Use Ollama (local)
+OPENAI_API_BASE=http://localhost:11434/v1
+OPENAI_MODEL_NAME=ollama/qwen2.5:0.5b
+OPENAI_API_KEY=sk-111111111111111111111111111111111111111111111111
 
-EMBEDDINGS_DEPLOYMENT_NAME=ollama/all-minilm:l6-v2
-EMBEDDINGS_BASE_URL=http://localhost:11434
-EMBEDDINGS_API_KEY=t
+# Option 2: Use OpenAI
+# OPENAI_API_KEY=your-openai-api-key
+# OPENAI_MODEL_NAME=gpt-3.5-turbo
+
+# Option 3: Use any LiteLLM supported provider
+# Check https://docs.litellm.ai/docs/providers for configuration
 
 # -- FASTAPI
 FASTAPI_HOST=localhost
 FASTAPI_PORT=8080
+
 # -- Streamlit
 STREAMLIT_PORT=8501
 
-####################### EVALUATION ############################
-# (Optional) If you want to use Promptfoo and ragas, the eval tool
-ENABLE_EVALUATION=False
-EVALUATOR_DEPLOYMENT_NAME=ollama_chat/qwen2.5:0.5b
-EVALUATOR_BASE_URL="http://localhost:11434/"
-EVALUATOR_API_KEY="t"
-
-
-####################### AI SEARCH ############################
-# (Optional) If you want to use Azure Search AI
-ENABLE_AZURE_SEARCH=False
-AZURE_SEARCH_TOP_K=3
-AZURE_SEARCH_API_KEY=""
-AZURE_SEARCH_INDEX_NAME=""
-AZURE_SEARCH_INDEXER_NAME=""
-AZURE_SEARCH_SERVICE_ENDPOINT=""
-SEMENTIC_CONFIGURATION_NAME=""
-# -- AZURE BLOB STORAGE
-AZURE_STORAGE_ACCOUNT_NAME=""
-AZURE_STORAGE_ACCOUNT_KEY=""
-AZURE_CONTAINER_NAME=""
+# -- Parking Configuration
+HOURLY_RATE=5.0
+PARKING_FLOORS=3
+SPOTS_PER_FLOOR=20
