--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,54 +1,53 @@
+version: '3.8'
+
 x-common-environment:
   &common-environment
-  OLLAMA_MODEL_NAME: ${OLLAMA_MODEL_NAME:-qwen2.5:0.5b}
-  OLLAMA_EMBEDDING_MODEL_NAME: ${OLLAMA_EMBEDDING_MODEL_NAME:-all-minilm:l6-v2}
-  INFERENCE_DEPLOYMENT_NAME: ${INFERENCE_DEPLOYMENT_NAME:-ollama_chat/qwen2.5:0.5b}
-  INFERENCE_BASE_URL: http://ollama:11434
-  INFERENCE_API_KEY: ${INFERENCE_API_KEY:-t}
-  EMBEDDINGS_DEPLOYMENT_NAME: ${EMBEDDINGS_DEPLOYMENT_NAME:-ollama/all-minilm:l6-v2}
-  EMBEDDINGS_BASE_URL: http://ollama:11434
-  EMBEDDINGS_API_KEY: ${EMBEDDINGS_API_KEY:-t}
   DEV_MODE: ${DEV_MODE:-True}
-  FASTAPI_HOST: ${FASTAPI_HOST:-localhost}
+  DATABASE_URL: ${DATABASE_URL:-sqlite:///./parking.db}
+  ASYNC_DATABASE_URL: ${ASYNC_DATABASE_URL:-sqlite+aiosqlite:///./parking.db}
+  OPENAI_API_BASE: ${OPENAI_API_BASE:-http://ollama:11434/v1}
+  OPENAI_MODEL_NAME: ${OPENAI_MODEL_NAME:-ollama/qwen2.5:0.5b}
+  OPENAI_API_KEY: ${OPENAI_API_KEY:-sk-111111111111111111111111111111111111111111111111}
+  FASTAPI_HOST: 0.0.0.0
   FASTAPI_PORT: ${FASTAPI_PORT:-8080}
   STREAMLIT_PORT: ${STREAMLIT_PORT:-8501}
 
 services:
-  frontend:
+  parking-app:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: frontend
-    command: make run-frontend
+    container_name: parking-management-system
     ports:
       - "8501:8501"
-    env_file: ".env.example.docker"
+      - "8080:8080"
     environment:
       <<: *common-environment
-
-#  backend:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-#    container_name: backend
-#    command: make run-backend
-#    ports:
-#      - "8080:8080"
-#    env_file: ".env.example.docker"
-#    environment:
-#      <<: *common-environment
+    volumes:
+      - parking-data:/data
+    depends_on:
+      - ollama
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8501"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   ollama:
-    build:
-      context: .
-      dockerfile: Dockerfile.ollama
-    ports:
-      - 11434:11434
-    volumes:
-      - ../ollama/:/root/.ollama
+    image: ollama/ollama:latest
     container_name: ollama
-    pull_policy: always
+    ports:
+      - "11434:11434"
+    volumes:
+      - ollama-data:/root/.ollama
     tty: true
-    restart: always
-    environment:
-      <<: *common-environment
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:11434"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+volumes:
+  parking-data:
+  ollama-data:
