--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,20 @@
 [project]
-name = "ai-cloud-project-template"
+name = "parking-management-system"
 version = "0.1.0"
-description = "Add your description here"
+description = "Parking Management System with AI Agent"
 readme = "README.md"
-requires-python = "==3.13.*"
+requires-python = ">=3.12,<3.13"
 dependencies = [
     # AI dependencies
-    "openai==1.66.3",
     "litellm==1.63.14",
-    "ollama==0.4.7",
-    "ragas==0.2.14",
-    "instructor==1.7.7",
-    "azure-search-documents==11.5.2",
-    "azure-storage-blob==12.25.0",
-    # observability
-    "langfuse==2.60.1",
+    "openai==1.66.3",
+    "crewai==0.41.1",
+    "langchain==0.2.11",
+    "langchain-openai==0.1.20",
+    # Database
+    "sqlalchemy==2.0.36",
+    "alembic==1.14.0",
+    "aiosqlite==0.20.0",
     # backend & frontend
     "python-multipart==0.0.9",
     "fastapi[standard]==0.115.5",
@@ -25,6 +25,8 @@ dependencies = [
     "pydantic-settings>=2.8.1",
     "loguru==0.7.3",
     "rich==13.9.4",
+    # Data processing
+    "pandas==2.2.3",
 
 ]
 
